removed tailwind usage and installed github-markdown-css

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,2 +1,6 @@
-@import "tailwindcss";
-@config "../../../tailwind.config.js";
+/*@import "tailwindcss";*/
+/*@config "../../../tailwind.config.js";*/
+
+html, body {
+  font-size: 16px;
+}
